--- a/workspaces/payments/tsconfig.json
+++ b/workspaces/payments/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "extends": "../../tsconfig.json",
+  // Keep standalone to avoid inheriting root settings
+  // "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
@@ -15,7 +16,8 @@
     "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
