--- a/workspaces/database/tsconfig.json
+++ b/workspaces/database/tsconfig.json
@@ -14,7 +14,8 @@
     "rootDir": "./src",
     "resolveJsonModule": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "types": ["node"]
   },
   "include": [
     "src/**/*"
