--- a/workspaces/mobile/package.json
+++ b/workspaces/mobile/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build": "expo build",
+    "build": "echo 'Skipping mobile build in scaffold. Use \"npm run ios\"/\"npm run android\" for device builds.'",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
