--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "turbo": "^1.10.0",
     "typescript": "^5.0.0"
   },
+  "overrides": {
+    "react-test-renderer": "18.2.0"
+  },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
