--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -3,26 +3,25 @@
   "version": "1.0.0",
   "description": "FastAPI backend with entity management and AI integration",
   "scripts": {
-    "dev": "python main.py",
+    "dev": "python3 main.py",
     "build": "echo 'Python backend - no build step required'",
-    "start": "python main.py",
-    "install": "python scripts/install-deps.py",
-    "install:python": "pip install -r requirements.txt",
+    "start": "python3 main.py",
+    "install:python": "python3 -m pip install -r requirements.txt",
     "install:js": "npm install",
     "generate": "prisma generate",
     "deploy": "modal deploy modal_app.py",
     "deploy:dev": "modal serve modal_app.py",
-    "test": "python -m pytest tests/ -v && vitest run",
-    "test:python": "python -m pytest tests/ -v",
+    "test": "python3 -m pytest tests/ -v && vitest run",
+    "test:python": "python3 -m pytest tests/ -v",
     "test:js": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "python -m pytest tests/ --cov=. && vitest run --coverage",
+    "test:coverage": "python3 -m pytest tests/ --cov=. && vitest run --coverage",
     "validate": "npm run lint && npm run format",
     "validate:deps": "node ../../scripts/validate-deps.js backend",
-    "lint": "python -m flake8 .",
-    "format": "python -m black .",
+    "lint": "python3 -m flake8 .",
+    "format": "python3 -m black .",
     "clean": "find . -type d -name __pycache__ -exec rm -rf {} + || true",
-    "validate:env": "python -c \"import os; print('DATABASE_URL:', bool(os.getenv('DATABASE_URL'))); print('ENABLE_PRISMA:', os.getenv('ENABLE_PRISMA', 'true'))\""
+    "validate:env": "python3 -c \"import os; print('DATABASE_URL:', bool(os.getenv('DATABASE_URL'))); print('ENABLE_PRISMA:', os.getenv('ENABLE_PRISMA', 'true'))\""
   },
   "dependencies": {
     "prisma": "^5.0.0"
