--- a/workspaces/mobile/package.json
+++ b/workspaces/mobile/package.json
@@ -48,9 +48,9 @@
     "@testing-library/react-native": "^12.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "~18.2.45",
-    "@types/react-native": "~0.73.0",
     "@vitejs/plugin-react": "^4.0.0",
     "jsdom": "^23.0.0",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3",
     "vitest": "^1.0.0"
   },
