--- a/workspaces/ai/tsconfig.json
+++ b/workspaces/ai/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "commonjs",
+    "module": "Node16",
     "lib": ["ES2022"],
     "types": ["node"],
     "outDir": "./dist",
@@ -16,7 +16,9 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "moduleResolution": "node16",
+    "baseUrl": "."
   },
   "include": [
     "src/**/*"
